# nr-theses-records

./: .gitignore  build.sh  generate.sh  local_install.sh  pytest.ini  run-tests.sh
.github/workflows/: codeql-analysis.yml  main.yaml
models/: __init__.py  nr-theses-records-model.yaml  nr-theses-records.yaml
nr-theses-records/: setup.cfg
nr-theses-records-model-builder/: README.md  setup.cfg
nr-theses-records-model-builder/nr_documents_records_model_builder/: version.py
nr-theses-records-model-builder/nr_theses_records_model_builder/models/: __init__.py
