[metadata]
name = nr-theses-records-model-builder
version = attr: nr_theses_records_model_builder.__version__
description = OARepo model builder extension for NR document records
long_description = file: README.md
long_description_content_type = text/markdown
keywords = National Repository theses model builder plugin Invenio
license = MIT
author = CESNET
author_email = bauer@cesnet.cz
platforms = any
url = https://github.com/NarodniRepozitar/nr-theses-records
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:

python_requires = >=3.9
zip_safe = False

install_requires =
    oarepo-model-builder>=1.0.0dev9
    oarepo-model-builder-multilingual>=0.1.9
    oarepo-model-builder-ui>=1.0.0
    nr-vocabularies>=0.0.1
    nr-vocabularies-model-builder>=0.0.2
    oarepo-vocabularies-model-builder>=0.0.6
    nr-common-metadata-model-builder>=4.0.0.dev5
    nr-documents-records-model-builder>=1.0.0


# [options.extras_require]
# tests =
#     pytest>=5.0.0
#     pytest-cov>=2.10.1
#     pytest-runner>=5.3.0


[options.package_data]
* = *.yaml, *.json, *.json5

[options.entry_points]
oarepo.models =
    nr-theses-records = nr_theses_records_model_builder.models:nr_theses_records

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 82

[pydocstyle]
add_ignore = D401
