[metadata]
name = nr-theses-records
version = attr: nr_theses_records.__version__
description = NR theses data model
long_description = file: README.md
long_description_content_type = text/markdown
keywords = National Repository theses data model Invenio
license = MIT
author = CESNET
author_email = bauer@cesnet.cz
platforms = any
url = https://github.com/NarodniRepozitar/nr-theses-records
classifiers =
    Development Status :: 5 - Production/Stable

install_requires =
    nr-documents-records>=1.0.0

[options.extras_require]
tests =
    pytest>=5.0.0
    pytest-cov>=2.10.1
    pytest-runner>=5.3.0
    oarepo-model-builder>=0.9.24

[options.package_data]
* = *.yaml, *.json

[options.entry_points]
invenio_base.apps =
    nr_theses_records = nr_theses_records.ext:NRThesesRecordsExt
invenio_base.api_apps =
    nr_theses_records = nr_theses_records.ext:NRThesesRecordsExt
invenio_base.api_blueprints =
    nr_theses_records = nr_theses_records.views:create_blueprint_from_app
invenio_db.alembic =
    nr_theses_records =nr_theses_records:alembic
invenio_db.models =
     nr_theses_records = nr_theses_records.records.models
invenio_jsonschemas.schemas =
    nr_theses_records = nr_theses_records.records.jsonschemas
invenio_search.mappings =
    nr_theses_records = nr_theses_records.records.mappings

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 82

[pydocstyle]
add_ignore = D401
